--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,20 +1,20 @@
 [production]
-phpSettings.display_startup_errors = 0
-phpSettings.display_errors = 0
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
 includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
-resources.frontController.params.displayExceptions = 0
+resources.frontController.params.displayExceptions = 1
 
-;Configuração de banco
-;resources.db.adapter         = pdo_mysql
-;resources.db.params.host     = 
-;resources.db.params.username = 
-;resources.db.params.password = 
-;resources.db.params.dbname   = 
-;resources.db.params.charset = "utf8"
+resources.db.adapter            = "PDO_MYSQL"
+resources.db.params.host        = "localhost"
+resources.db.params.dbname      = "dcfinancas"
+resources.db.params.username    = "root"
+resources.db.params.password    = "root"
+
+resources.view.encoding         = "utf-8"
 
 ;inclusão do diretório layouts
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
@@ -28,8 +28,3 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
-
-[staging : production]
-database.params.host     = localhost
-database.params.username = root
-database.params.password = root
